# 68keys

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  commands.cmake  download.jlink  samd21g18au.ld
lib/: CMakeLists.txt
lib/asf/: CMakeLists.txt
lib/asf/inc/: conf_extint.h  conf_usb.h
lib/rtt/: CMakeLists.txt
src/: asf.h  board_init.c  board_init.cpp  main.cpp  matrix.cpp  matrix.hpp  scancodes.hpp  usb_callbacks.c  usb_callbacks.cpp
src/config/: conf_board.h  conf_clocks.h  conf_usb.h  user_board.h
